--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -7,6 +7,13 @@ on:
       - develop
 
 jobs:
+  echo:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Dump GitHub context
+        env:
+          GITHUB_BRANCH: ${{ github.GITHUB_REF_NAME }}
+        run: echo "$GITHUB_BRANCH"
   deploy:
     runs-on: ubuntu-22.04
     permissions:
