--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -6,6 +6,9 @@ on:
       - main
       - develop
 
+env:
+  PUBLISH_DIR: ${{ github.event_name != 'pull_request' && github.ref_name || format('PRs/{0}', github.event.number) }}
+
 jobs:
   echo:
     runs-on: ubuntu-latest
@@ -33,3 +36,8 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
           destination_dir: ./${{ github.ref_name }}
+      - name: Comment PR
+        uses: thollander/actions-comment-pull-request@v2
+        with:
+          message: |
+            The storybook URL is: http://123/$PUBLISH_DIR/index.html
