add comment tag

--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -43,4 +43,5 @@ jobs:
         uses: thollander/actions-comment-pull-request@v2
         with:
           message: |
-            The storybook URL is: http://123/${{ env.PUBLISH_DIR }}/index.html
+            The storybook URL: http://123/${{ env.PUBLISH_DIR }}/index.html
+          comment_tag: sl-ui-storybook-url
