--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -40,5 +40,5 @@ jobs:
         uses: thollander/actions-comment-pull-request@v2
         with:
           message: |
-            The storybook URL of ${{ github.event.head_commit.message }}: http://123/${{ env.PUBLISH_DIR }}/index.html
+            The storybook URL of ${{ github.head_ref }}: http://123/${{ env.PUBLISH_DIR }}/index.html
           comment_tag: sl-ui-storybook-url
